// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabel 镜像测试 不可用状态 1`] = `
<span
  className="sc-bdnylx dhFLkM sinoui-switch__label"
  data-testid="switchLabel"
  disabled={true}
>
  <input
    className="sinoui-switch__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 渲染SwitchLabel 1`] = `
<span
  className="sc-bdnylx hRLvVg sinoui-switch__label"
  data-testid="switchLabel"
>
  <input
    className="sinoui-switch__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 选中状态 1`] = `
<span
  checked={true}
  className="sc-bdnylx fmyRMx sinoui-switch__label"
  color="info"
  data-testid="switchLabel"
>
  <input
    checked={true}
    className="sinoui-switch__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;
